test/fail/enums_and_variants/wrong_arg_count_scoped_variant.lly
#[
SyntaxError: Variant Option::Some expects 1 args, but got 2.
Where: File "wrong_arg_count_scoped_variant.lly" at line 11
]#

enum class Option[A] {
	::Some(A),
	::None
}

var opt: Option[integer] = Option::Some(1, 2)
